--- a/es-kibana/kibana/kibana-service.yaml
+++ b/es-kibana/kibana/kibana-service.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kibana-nodepod
+  name: kibana-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: kibana-app
   ports:
   - port: 5601
-    nodePort: 30601
