--- a/nginx-proxy/conf.d/minio.conf
+++ b/nginx-proxy/conf.d/minio.conf
@@ -2,6 +2,6 @@ server {
  server_name minio.local;
 
  location / {
-   proxy_pass http://minio:9000;
+   proxy_pass http://minio-service:9000;
  }
 }
