--- a/ingress/ingress.yml
+++ b/ingress/ingress.yml
@@ -2,6 +2,15 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: http-ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade "websocket";
+    #   proxy_set_header Connection "Upgrade";
 spec:
   rules:
   - host: minio.local
